--- a/Pipfile
+++ b/Pipfile
@@ -1,4 +1,7 @@
-[[source]]
+[requires]
+python_version = "3.8"
+
+[source]
 url = "https://pypi.org/simple"
 verify_ssl = true
 name = "pypi"
@@ -7,7 +10,4 @@ name = "pypi"
 importlib-metadata = "6.0.0"
 importlib-resources = "5.10.0"
 ipdb = "0.13.9"
-pytest="7.1.3"
 
-[requires]
-python_full_version = "3.8.13"
